# shady-life

./: Cargo.toml  README.md
client/: Cargo.toml  index.html
client/src/: lib.rs  particle.rs  render.rs  simulation.rs
client/src/shaders/: compute.wgsl  mod.rs  render.wgsl
server/: Cargo.toml
server/src/: main.rs
src/shaders/: compute.wgsl  render.wgsl
